[gd_scene load_steps=11 format=1]

[ext_resource path="res://src/nd_perfil.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/cocogoose_trial.otf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/sprites/particular/linkedin.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/particular/blue_button13.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/particular/blue_button04.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]

font/size = 60
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]

font/size = 30
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]

font/size = 25
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]

font/size = 35
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 2 )

[sub_resource type="Animation" id=5]

resource/name = "view_perfil"
length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.1, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="nd_perfil" type="Node2D"]

visibility/visible = false
visibility/opacity = 0.0
script/script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="lbl_title" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 43.0
margin/right = 720.0
margin/bottom = 149.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.109804, 0.654902, 0.882353, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "actualiza tu"
align = 1
valign = 1
autowrap = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="lbl_title1" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 148.0
margin/right = 720.0
margin/bottom = 254.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.109804, 0.654902, 0.882353, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "informacion"
align = 1
valign = 1
autowrap = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="lbl_direction" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 334.0
margin/right = 293.0
margin/bottom = 412.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.109804, 0.654902, 0.882353, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "Direccion: "
align = 2
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="txe_direccion" type="TextEdit" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 308.0
margin/top = 340.0
margin/right = 696.0
margin/bottom = 397.0
custom_fonts/font = SubResource( 3 )
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65
__meta__ = {
"_edit_lock_": true
}

[node name="txe_job" type="TextEdit" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 574.0
margin/top = 423.0
margin/right = 695.0
margin/bottom = 480.0
custom_fonts/font = SubResource( 3 )
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65
__meta__ = {
"_edit_lock_": true
}

[node name="txe_job_direction" type="TextEdit" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 497.0
margin/top = 526.0
margin/right = 695.0
margin/bottom = 583.0
custom_fonts/font = SubResource( 3 )
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65
__meta__ = {
"_edit_lock_": true
}

[node name="txe_linkedin" type="TextEdit" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 139.0
margin/top = 748.0
margin/right = 703.0
margin/bottom = 805.0
custom_fonts/font = SubResource( 3 )
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65
__meta__ = {
"_edit_lock_": true
}

[node name="lbl_job" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 50.0
margin/top = 415.0
margin/right = 560.0
margin/bottom = 493.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.109804, 0.654902, 0.882353, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "se encuentra trabajando?: "
align = 2
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="lbl_url" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 45.0
margin/top = 741.0
margin/right = 120.0
margin/bottom = 819.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.109804, 0.654902, 0.882353, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "URL: "
align = 2
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="lbl_where_job" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 37.0
margin/top = 517.0
margin/right = 479.0
margin/bottom = 595.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.109804, 0.654902, 0.882353, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "direcccion del trabajo:"
align = 2
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="TextureFrame" type="TextureFrame" parent="."]

rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 218.0
margin/top = 643.0
margin/right = 735.0
margin/bottom = 771.0
texture = ExtResource( 3 )
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="txb_confirm" type="TextureButton" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 395.0
margin/top = 1074.0
margin/right = 680.0
margin/bottom = 1187.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 5 )
params/resize_mode = 0
params/scale = Vector2( 1.5, 2.3 )
params/stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="lbl_confirm" type="Label" parent="txb_confirm"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 285.0
margin/bottom = 113.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.109804, 0.654902, 0.882353, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "confirmar"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="txb_back" type="TextureButton" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 49.0
margin/top = 1076.0
margin/right = 334.0
margin/bottom = 1189.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/scale = Vector2( 1.5, 2.3 )
params/stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="lbl_back" type="Label" parent="txb_back"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 285.0
margin/bottom = 113.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.109804, 0.654902, 0.882353, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "volver"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="anp_perfil" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/view_perfil = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""


